[package]
name = "zkap-evm-verifier"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Solidity on-chain Groth16 verifier codegen for ZKAP"
repository = "https://github.com/snp-labs/zkap-circuit"
keywords = ["zk", "groth16", "solidity", "evm", "verifier"]
categories = ["cryptography"]

[dependencies]
ark-ec      = { workspace = true }
ark-ff      = { workspace = true }
ark-groth16 = { workspace = true }
ark-std     = { workspace = true }
hex         = { workspace = true }

[dev-dependencies]
# Concrete pairing engine used by every downstream caller of this crate
# (`zkap-service::crs` instantiates `VerifyingKey<Bn254>` for trusted
# setup output). Tests construct a synthetic `VerifyingKey<Bn254>` to
# round-trip the Solidity codegen without paying the cost of a real
# Groth16 setup.
ark-bn254 = { workspace = true }

[lints]
workspace = true
