[package]
name = "zkap-input-types"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "V1 wire-format types for the ZKAP main circuit, decoupled from circuit/gadget"
repository = "https://github.com/snp-labs/zkap-circuit"
keywords = ["zk", "groth16", "wasm", "arkworks"]
categories = ["cryptography"]

[dependencies]
ark-ff    = { workspace = true }
serde     = { workspace = true }
postcard  = { version = "1", default-features = false, features = ["alloc"] }
thiserror = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
