[package]
name = "zkap-witness-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Wasm witness-generator artifact for the ZKAP main circuit (zkap-witness-wasm thin layer over ark-ar1cs-wasm-witness)"
repository = "https://github.com/snp-labs/zkap-circuit"
keywords = ["zk", "groth16", "wasm", "arkworks"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Generic ConstraintSynthesizer-to-.arwtns layer + wasm export macro.
# Path-based; workspace-wide path is configured in
# `<workspace root>/Cargo.toml` under `[workspace.dependencies]` so a
# single edit re-points all `ark-ar1cs-*` deps if the sibling repo
# moves. See repo README for the expected sibling-directory layout.
ark-ar1cs-wasm-witness = { workspace = true }
ark-ar1cs-format       = { workspace = true }

# V1 wire types (`ark_utils::wire`) are pulled transitively via
# `circuit` and `ark-utils`; no direct dep needed after PR1 of L4 absorption.
circuit = { workspace = true }
# V1 wasm-side conversion needs `build_anchor_witness`, `IndexBits`,
# `get_poseidon_params`, `get_base64_table`, `MerkleTreeParams`,
# `VandermondeMatrix`, `PublicKey`, `Signature`. `circuit` already links
# `gadget`, so naming it directly only adds the use-site, not new bytes.
gadget = { workspace = true, default-features = false, features = ["crypto", "base64", "rsa"] }

# V1 wire schema (`ark_utils::wire`) and field codec helpers, absorbed
# from former `zkap-input-types` crate (PR1 of L4 absorption).
ark-utils             = { workspace = true }
ark-ff                = { workspace = true }
ark-serialize         = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["crh", "merkle_tree"] }

serde     = { workspace = true }
thiserror = { workspace = true }
# postcard is also a transitive of ark-ar1cs-wasm-witness; naming it
# directly here keeps `into_circuit_input` and unit tests on a single
# consistent version.
postcard  = { version = "1", default-features = false, features = ["alloc"] }

# wasm32 target needs getrandom's `js` feature so dependencies that pull
# `getrandom` (rand_core, etc.) compile against the browser/Node bindings
# instead of failing on the unknown-os target.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# Path-based via `[workspace.dependencies]`; see the matching note on the
# top-level `[dependencies]` block.
ark-ar1cs-wtns   = { workspace = true }
ark-ar1cs-zkey   = { workspace = true }
ark-ar1cs-prover = { workspace = true }
ark-ar1cs-format = { workspace = true }
# Pulled into dev-deps so wasm_to_prove integration tests can drive
# zkap_service::prove (the host-side ar1cs_blake3 fail-fast check
# lives there). dev-only, no impact on the wasm artifact.
zkap-service     = { path = "../service" }
postcard         = { version = "1", default-features = false, features = ["alloc"] }

# wasmtime: minimal feature set (cranelift JIT + runtime; no CLI/wat).
wasmtime = { version = "44", default-features = false, features = ["cranelift", "runtime"] }

# Arkworks deps used by the integration test fixture (groth16 setup,
# circuit synthesis, RSA-signed JWT generation).
ark-bn254             = { workspace = true }
ark-ec                = { workspace = true }
ark-ff                = { workspace = true, features = ["std"] }
ark-relations         = { workspace = true }
ark-groth16           = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["crh", "merkle_tree", "r1cs"] }
ark-std               = { workspace = true }
ark-utils             = { workspace = true, features = ["field-serde"] }
gadget                = { workspace = true, features = ["full"] }
ark-serialize         = { workspace = true }

rsa    = { workspace = true }
sha2   = { workspace = true }
hex    = { workspace = true }
base64 = { workspace = true }
regex  = { workspace = true }
rand   = { workspace = true }

[lints]
workspace = true
